# restful-api-deploy

./: .travis.yml  docker-compose.yml  pyproject.toml
flask_app/: Dockerfile  Dockerfile.dev  app.py  requirements.txt  wsgi.py
flask_app/machine_leaning_models/: svm_clf.pickle  tfidf.pickle
flask_app/models/: model_backend.py
flask_app/resources/: model_gatway.py
nginx/: Dockerfile  project.conf
tests/: test_api.py
