[tool.poetry]
name = "RESTFull-API-Deploy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
Flask-JWT = "^0.3.2"
spacy = "^3.0.5"
ipykernel = "^5.5.3"
notebook = "^6.3.0"
jupyter = "^1.0.0"
typeguard = "^2.12.0"
numpy = "^1.20.2"
pandas = "^1.2.4"
scikit-learn = "0.22.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
